--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ a {
   cursor: pointer;
   display: block;
   transition: .4s;
+  box-sizing: border-box;
 }
 .btn:hover {
   background-color: #333;
@@ -458,4 +459,48 @@ header .badges .badge {
   background-color: #333;
   color: #fff;
 
+}
+
+
+/* Rewards */
+.rewards {
+  position: relative;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .inner {
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .btn-group {
+  position: absolute;
+  width: 250px;
+  bottom: 24px;
+  right: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  flex-grow: 1;
 }
